hphp/hack/test/typecheck/tuple_as_constant2.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function get_int(): int {
  return 0;
}

class A {
  const (int, int) MY_TUPLE = tuple(get_int(), get_int());
}
